@@ -1,5 +1,9 @@
 2008-07-27  Mirco Bauer <meebey@meebey.net> 
 
+	* MainWindow.cs: Use Gtk.Stock.About button.
+
+2008-07-27  Mirco Bauer <meebey@meebey.net> 
+
 	* Chats/GroupChatView.cs: Implemented applying topic and user list position
 	  settings for existing chats. (closes trac bug #56)
 	
